--- a/xm/style.scss
+++ b/xm/style.scss
@@ -1,5 +1,6 @@
 * {
     font-family: "Times New Roman", Times, serif;
+    user-select: none;
 }
 
 header {
@@ -13,6 +14,7 @@ header {
                 font-size: 18px;
                 line-height: 22px;
                 color: #828282;
+                cursor: pointer;
             }
         }
     }
@@ -38,11 +40,81 @@ header {
                 color: #828282;
                 display: inline-block;
                 transform: rotate(90deg);
-                .active{
+                .active {
                     font-weight: 900;
                     color: #070707;
                 }
             }
         }
+    }
+}
+#about {
+    padding-top: 120px;
+    background-color: #f6f6f6;
+    padding-bottom: 107px;
+    .text1 {
+        font-size: 34px;
+        line-height: 42px;
+        text-align: center;
+        color: #070707;
+    }
+    .text2,
+    .text3,
+    .text4 {
+        padding-top: 18px;
+        font-weight: 800;
+        font-size: 20px;
+        line-height: 22px;
+        text-align: center;
+        color: #070707;
+    }
+}
+#portfolio {
+    padding-top: 112px;
+    padding-bottom: 90px;
+    .text1 {
+        font-size: 34px;
+        line-height: 42px;
+        text-align: center;
+        color: #070707;
+        padding-bottom: 47px;
+    }
+    .swiper {
+        width: 100%;
+        height: 300px;
+    }
+}
+#contacts {
+    padding-top: 114px;
+    padding-bottom: 40px;
+    background-color: #f6f6f6;
+    .text1 {
+        font-size: 34px;
+        line-height: 42px;
+        text-align: center;
+        color: #070707;
+    }
+    .text2 {
+        padding-top: 20px;
+        font-size: 18px;
+        line-height: 22px;
+        text-align: center;
+        color: #070707;
+        padding-bottom: 30px;
+    }
+    .text3 {
+        font-size: 18px;
+        line-height: 22px;
+        text-align: center;
+        background-color: #070707;
+        color: #ffffff;
+        border-radius: 20px;
+    }
+    .text4 {
+        padding-top: 30px;
+        font-size: 14px;
+        line-height: 17px;
+        text-align: center;
+        color: #828282;
     }
 }
